@@ -1,3 +1,7 @@
+2005-03-10 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.cc: Added an 'X' state to getBitChar method
+	of the IO_open_collector class.
+
 2005-04-08 Borut Razem <borut.razem@siol.net>
 	* modules/makefile.mingw: pthreads upgrade
 
